# MaabadaProject

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  firstpass.c  main.c
common/: ERR.h  data.h  errors.h  linked_list.c  linked_list.h  utils.c  utils.h
datatypes/: array.c  array.h  assembler.c  assembler.h  growing_array.c  growing_array.h  linked_list.c  linked_list.h  list.c  list.h  table.c  table.h
examples/dummy1/: dummy1.am
examples/dummy2/: main.am
examples/dummy3/: dummy3.am
examples/dummy4/: dummy4.as
examples/showcase/valid/simpleLoopExternalLibs/: utils.as  utils.asm
examples/showcase/valid/simpleLoopPrint/: main.as  main.asm
examples/showcase/valid/testFromPDF/: dummy3.am  ps.as
examples/wont_work/: illegal_keywords.as  matricesTesting.am  notEnoughArgs.am
firstpass/: README.md  data.h  firstpass.c  firstpass.h  main.c  parser.c  parser.h  utils.c  utils.h
headers/: codegen.h  context.h  data.h  errors.h  list.h  output.h  parser.h  preprocessor.h  table.h  utils.h
include/: assembler.h  codegen.h  context.h  data.h  errors.h  firstpass.h  list.h  macroprocessor.h  output.h  parser.h  preprocessor.h  table.h  utils.h
preprocess/: Makefile  a.out  dummy.example  dummy1  dummy2  macroprocessor.c  parser.c  parser.h  test3
preprocess/libs/: datatypes.c  datatypes.h  parser.c  parser.c.bak  parser.h  printer.c  printer.h
showcase/errors/preprocessorFail/: code.am  code.as
showcase/errors/various1/: code.am  code.as
showcase/errors/various2/: code.as
showcase/valid/simpleLoopExternalLibs/: main.as  main.ext  main.ob  utils.ent  utils.ob
showcase/valid/simpleLoopPrint/: main.am  main.as  main.ob
showcase/valid/testFromPDF/: ps.as  ps.ext  ps.ob
source/: assembler.c  codegen.c  context.c  data.c  errors.c  firstpass.c  list.c  macroprocessor.c  output.c  parser.c  preprocessor.c  table.c  utils.c
tests/: InvalidLabelsCheckup.c  common.h  dataEntryNumbersTooBig.c  dataTooLarge.c  data_check_assembler.c  directives.c  dummy3test.c  first_pass_instruction_zero_args.c  firstpass_data_test.c  firstpass_not_enough_args.c  firstpass_parser1.c  main_tester.c  matEntryValidMat.c  movTest.c  statementParsing.c  stringEntryValidStrings.c
tests/auto/: __init__.py  colour_prompt.rb  colour_reporter.rb  extract_version.py  generate_config.yml  generate_module.rb  generate_test_runner.rb  parse_output.rb  run_test.erb  stylize_as_junit.py  stylize_as_junit.rb  test_file_filter.rb  type_sanitizer.rb  unity_test_summary.py  unity_test_summary.rb  yaml_helper.rb
tests/firstpass/parser/data/: main_tester.c
tests/firstpass/parser/ddata/: main_tester.c
tests/firstpass/parser/instruction/zero_args/: main_tester.c
tests/lib/: unity.h  unity_internals.h
